<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<!--        <ImageView-->
<!--            android:id="@+id/boxArt"-->
<!--            android:layout_width="400dp"-->
<!--            android:layout_height="400dp"-->
<!--            android:contentDescription="@string/cartridge_box_art"-->
<!--            android:background="@drawable/border_shape"-->
<!--            android:src="@drawable/unknown" />-->
        <ImageView
            android:id="@+id/boxArt"
            android:layout_width="wrap_content"
            android:layout_height="410dp"
            android:contentDescription="@string/cartridge_box_art"
            android:src="@drawable/unknown" />

        <TextView
            android:id="@+id/cartridgeInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/unknown"
            />
    </LinearLayout>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/connect"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/dumpRom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/dump_rom"
        android:layout_marginBottom="15dp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/runGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/run_game"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        style="?android:attr/buttonBarButtonStyle" />

</RelativeLayout>
